--- a/astra.ipynb
+++ b/astra.ipynb
@@ -113,6 +113,84 @@
     "\n",
     "retriever.invoke(\"What is agent\",ConsistencyLevel=\"LOCAL_ONE\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Router"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Literal\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "\n",
+    "class RouteQuery(BaseModel):\n",
+    "    datadource: Literal['vectorstore', 'wiki_search'] = Field(\n",
+    "        ...,\n",
+    "        description = \"Given a user query, chose to search in vectorstore or wiki_search\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import userdata\n",
+    "from langchain_groq import ChatGroq\n",
+    "\n",
+    "groq_api_key = userdata.get('groq_api_key')\n",
+    "os.environ[\"GROQ_API_KEY\"] = groq_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatGroq(\n",
+    "    groq_api_key = groq_api_key,\n",
+    "    model_name = \"Gemma2-9b-It\"\n",
+    ")\n",
+    "\n",
+    "structured_llm_router = llm.with_structured_output(RouteQuery)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prompt\n",
+    "system = \"\"\"You are an expert at routing a user question to a vectorstore or wikipedia.\n",
+    "The vectorstore contains documents related to agents, prompt engineering, and adversarial attacks.\n",
+    "Use the vectorstore for questions on these topics. Otherwise, use wiki-search.\"\"\"\n",
+    "\n",
+    "route_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", system),\n",
+    "        (\"human\", \"{question}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "question_router = route_prompt | structured_llm_router\n",
+    "print(\n",
+    "    question_router.invoke(\n",
+    "        {\"question\": \"who is Sharukh Khan?\"}\n",
+    "    )\n",
+    ")\n",
+    "print(question_router.invoke({\"question\": \"What are the types of agent memory?\"}))"
+   ]
   }
  ],
  "metadata": {
